--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "codeing-challenge",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5",
-    "babel-preset-react": "^6.24.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "@rails/ujs": "^6.0.3-2",
+    "@rails/webpacker": "4.2.2",
+    "stimulus": "^1.1.1",
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "3.1.11"
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "postcss-loader": "^3.0.0",
+    "tailwindcss": "^1.3.5",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "scripts": {
+    "start": "./bin/webpack-dev-server"
   }
 }
